# cmpct

./: .pkg  CMakeLists.txt
cmake/: pkg.cmake
include/: cmpct.hpp
src/: cmpct.cpp
test/: main.cpp
